--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 FRONTEND_URL=http://localhost:3000
+GEMINI_API_KEY=your_gemini_api_key
